--- a/app/src/main/res/layout/activity_default_gallery.xml
+++ b/app/src/main/res/layout/activity_default_gallery.xml
@@ -26,7 +26,7 @@
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:padding="12dp"
-            android:src="@drawable/todo_circle"
+            android:src="@drawable/ic_gallery_photo_black_24"
             android:scaleType="centerInside"
             android:background="@drawable/black_circle"
             android:contentDescription="@string/grouping_similar_images_button"/>
@@ -36,7 +36,7 @@
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:padding="12dp"
-            android:src="@drawable/todo_circle"
+            android:src="@drawable/ic_gallery_video_black_24"
             android:scaleType="centerInside"
             android:background="@drawable/black_circle"
             android:contentDescription="@string/making_movie_button"/>
@@ -46,7 +46,7 @@
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:padding="12dp"
-            android:src="@drawable/phone_magnifying_glass"
+            android:src="@drawable/ic_gallery_search_black_24"
             android:scaleType="centerInside"
             android:background="@drawable/black_circle"
             android:contentDescription="@string/search_button"/>
@@ -56,7 +56,7 @@
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:padding="12dp"
-            android:src="@drawable/phone_more"
+            android:src="@drawable/ic_gallery_add_black_24"
             android:scaleType="centerInside"
             android:background="@drawable/black_circle"
             android:contentDescription="@string/more_button"/>
@@ -64,7 +64,7 @@
     </LinearLayout>
 
     <FrameLayout
-        android:id="@+id/gallery_fragment"
+        android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/top_menu_bar"
