--- a/app/src/main/res/layout/fragment_default_gallery_album.xml
+++ b/app/src/main/res/layout/fragment_default_gallery_album.xml
@@ -6,6 +6,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".edu_space.default_app.activity.DefaultGalleryAlbumActivity">
+    tools:context=".edu_space.default_app.fragment.DefaultGalleryAlbumFragment">
 
 </androidx.recyclerview.widget.RecyclerView>
