--- a/app/src/main/res/layout/item_gallery_album.xml
+++ b/app/src/main/res/layout/item_gallery_album.xml
@@ -41,7 +41,7 @@
             android:layout_gravity="center"
             android:text="@string/one"
             android:textSize="12sp"
-            android:textColor="@color/black"/>
+            android:textColor="@color/gallery_album_count"/>
 
     </LinearLayout>
 
