--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -67,6 +67,7 @@
     <color name="message_chatting_item_bg">#FCFCFC</color>
 
     <color name="gallery_album_bg">#F2F2F2</color>
+    <color name="gallery_album_count">#666666</color>
 
   <!-- 실습 공간 -->
     <color name="icon_learning_btn">#3DB2FF</color>
