--- a/app/src/main/res/layout/item_gallery_album.xml
+++ b/app/src/main/res/layout/item_gallery_album.xml
@@ -7,7 +7,7 @@
     android:layout_height="wrap_content"
     android:layout_marginBottom="12dp"
     android:padding="12dp"
-    android:background="@color/gallery_album_bg">
+    android:background="@color/gallery_bg">
 
     <ImageView
         android:id="@+id/album_image"
