✨(갤러리/스토리) 리스트 구현

--- a/app/src/main/res/layout/item_gallery_story.xml
+++ b/app/src/main/res/layout/item_gallery_story.xml
@@ -49,6 +49,7 @@
             android:id="@+id/story_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
             android:text="@string/init_date"
             android:textSize="12sp"
             android:textColor="@color/gallery_story_date"/>
