--- a/app/src/main/res/layout/activity_dlv_main.xml
+++ b/app/src/main/res/layout/activity_dlv_main.xml
@@ -106,7 +106,7 @@
 
     <ImageView
         android:id="@+id/adverise"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="100dp"
         android:layout_marginStart="13dp"
         android:layout_marginEnd="13dp"
