--- a/app/src/main/res/layout/fragment_default_phone_tool.xml
+++ b/app/src/main/res/layout/fragment_default_phone_tool.xml
@@ -1,6 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--연락처 리스트-->
-
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
@@ -24,13 +22,6 @@
         android:gravity="end">
 
         <ImageView
-            android:id="@+id/add"
-            android:layout_width="52dp"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_add_black_24"
-            android:padding="2dp"/>
-
-        <ImageView
             android:layout_width="52dp"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_search_black_24dp" />
@@ -42,17 +33,10 @@
             android:layout_marginEnd="18dp" />
     </LinearLayout>
 
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".edu_space.default_app.fragment.DefaultPhoneContactFragment">
-
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/contact_list"
+        android:id="@+id/recent_history_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-
-</FrameLayout>
+        android:layout_height="match_parent"
+        android:layout_marginTop="20dp"/>
 </LinearLayout>
+
