--- a/app/src/main/res/layout/activity_default_gallery.xml
+++ b/app/src/main/res/layout/activity_default_gallery.xml
@@ -90,6 +90,7 @@
             app:layout_constraintEnd_toStartOf="@id/album_button">
 
             <TextView
+                android:id="@+id/picture_button_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="12sp"
@@ -116,6 +117,7 @@
             app:layout_constraintEnd_toStartOf="@id/story_button">
 
             <TextView
+                android:id="@+id/album_button_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="12sp"
@@ -142,6 +144,7 @@
             app:layout_constraintEnd_toStartOf="@id/share_button">
 
             <TextView
+                android:id="@+id/story_button_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="12sp"
@@ -168,6 +171,7 @@
             app:layout_constraintEnd_toEndOf="parent">
 
             <TextView
+                android:id="@+id/share_button_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="12sp"
