--- a/app/src/main/res/layout/activity_default_gallery.xml
+++ b/app/src/main/res/layout/activity_default_gallery.xml
@@ -13,7 +13,7 @@
         android:layout_height="match_parent"/>
 
     <LinearLayout
-        android:id="@+id/top_menu_bar"
+        android:id="@+id/top_nav_bar"
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -67,11 +67,11 @@
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/top_menu_bar"
-        app:layout_constraintBottom_toTopOf="@id/bottom_menu_bar"/>
+        app:layout_constraintTop_toBottomOf="@id/top_nav_bar"
+        app:layout_constraintBottom_toTopOf="@id/bottom_nav_bar"/>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/bottom_menu_bar"
+        android:id="@+id/bottom_nav_bar"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:padding="8dp"
@@ -100,7 +100,7 @@
                 android:id="@+id/picture_button_line"
                 android:layout_width="48dp"
                 android:layout_height="5dp"
-                android:src="@color/black"/>
+                android:src="@drawable/gallery_bottom_nav_underline"/>
 
         </LinearLayout>
 
@@ -127,7 +127,7 @@
                 android:id="@+id/album_button_line"
                 android:layout_width="48dp"
                 android:layout_height="5dp"
-                android:src="@color/black"/>
+                android:src="@drawable/gallery_bottom_nav_underline"/>
 
         </LinearLayout>
 
@@ -154,7 +154,7 @@
                 android:id="@+id/story_button_line"
                 android:layout_width="48dp"
                 android:layout_height="5dp"
-                android:src="@color/black"/>
+                android:src="@drawable/gallery_bottom_nav_underline"/>
 
         </LinearLayout>
 
@@ -181,7 +181,7 @@
                 android:id="@+id/share_button_line"
                 android:layout_width="48dp"
                 android:layout_height="5dp"
-                android:src="@color/black"/>
+                android:src="@drawable/gallery_bottom_nav_underline"/>
 
         </LinearLayout>
 
