--- a/app/src/main/res/layout/activity_naver_search_result.xml
+++ b/app/src/main/res/layout/activity_naver_search_result.xml
@@ -74,10 +74,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/search_bar"
-        android:layout_above="@id/bottom_menu_bar"/>
+        android:layout_above="@id/bottom_nav_bar"/>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/bottom_menu_bar"
+        android:id="@+id/bottom_nav_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true">
