🚚(기본 앱) 패키지 경로 정리

--- a/app/src/main/res/layout/activity_default_menu.xml
+++ b/app/src/main/res/layout/activity_default_menu.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="#FFFFFF"
     android:id="@+id/rootLayout"
-    tools:context=".edu_space.default_app.activity.DefaultHomeActivity">
+    tools:context=".edu_space.default_app.todo.DefaultHomeActivity">
 
     <ImageView
         android:id="@+id/imageView45"
