--- a/app/src/main/res/layout/activity_default_app_bar.xml
+++ b/app/src/main/res/layout/activity_default_app_bar.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFFFF"
-    tools:context=".edu_space.default_app.activity.DefaultAppBarActivity">
+    tools:context=".edu_space.default_app.todo.DefaultAppBarActivity">
 
     <ImageView
         android:id="@+id/imageView45"
