--- a/app/src/main/res/layout/activity_default_phone.xml
+++ b/app/src/main/res/layout/activity_default_phone.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/phoneDeepBgColor"
-    tools:context=".edu_space.default_app.activity.DefaultPhoneActivity">
+    tools:context=".edu_space.default_app.phone.activity.DefaultPhoneActivity">
 
     <com.sungkyul.synergy.utils.edu.EduScreen
         android:id="@+id/edu_screen"
