--- a/app/src/main/res/layout/activity_default_phone_add.xml
+++ b/app/src/main/res/layout/activity_default_phone_add.xml
@@ -6,7 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".edu_space.default_app.activity.DefaultMessageActivity"
+    tools:context=".edu_space.default_app.message.activity.DefaultMessageActivity"
     android:background="@color/message_screen_bg">
 
     <com.sungkyul.synergy.utils.edu.EduScreen
