--- a/app/src/main/res/layout/fragment_default_gallery_share.xml
+++ b/app/src/main/res/layout/fragment_default_gallery_share.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".edu_space.default_app.fragment.DefaultGalleryShareFragment">
+    tools:context=".edu_space.default_app.gallery.fragment.DefaultGalleryShareFragment">
 
     <Button
         android:id="@+id/creating_shared_album_button"
