--- a/app/src/main/res/layout/fragment_default_phone_contact.xml
+++ b/app/src/main/res/layout/fragment_default_phone_contact.xml
@@ -47,7 +47,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".edu_space.default_app.fragment.DefaultPhoneContactFragment">
+    tools:context=".edu_space.default_app.phone.fragment.DefaultPhoneContactFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/contact_list"
