💄(갤러리) 사진의 scaleType을 centerCrop으로 변경

--- a/app/src/main/res/layout/item_gallery_album.xml
+++ b/app/src/main/res/layout/item_gallery_album.xml
@@ -16,7 +16,7 @@
         android:layout_marginTop="12dp"
         android:layout_gravity="center"
         android:src="@drawable/sample_screenshot2"
-        android:scaleType="centerInside"
+        android:scaleType="centerCrop"
         android:contentDescription="@string/synergy"/>
 
     <LinearLayout
