--- a/app/src/main/res/layout/activity_default_phone.xml
+++ b/app/src/main/res/layout/activity_default_phone.xml
@@ -36,6 +36,17 @@
             android:layout_height="match_parent"
             android:gravity="end">
 
+            <EditText
+                android:id="@+id/search_edit_text"
+                android:layout_width="wrap_content"
+                android:layout_height="48dp"
+                android:textSize="16sp"
+                android:textColor="@color/naver_search_black"
+                android:autofillHints="@string/naver_search_hint"
+                android:background="@null"
+                android:layout_weight="1"/>
+
+
             <ImageButton
                 android:id="@+id/magnifying_glass_button"
                 android:layout_width="48dp"
