--- a/app/src/main/res/layout/fragment_default_phone_contact.xml
+++ b/app/src/main/res/layout/fragment_default_phone_contact.xml
@@ -17,29 +17,51 @@
         android:layout_marginBottom="130dp"
         android:layout_marginTop="130dp"/>
 
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
         android:gravity="end">
 
-        <ImageView
-            android:id="@+id/add"
+
+        <EditText
+            android:id="@+id/search_edit_text"
+            android:layout_width="100dp"
+            android:layout_height="48dp"
+            android:textSize="18sp"
+            android:background="@android:color/transparent"
+            android:layout_gravity="left"
+            />
+
+
+        <ImageButton
+            android:id="@+id/add_button"
             android:layout_width="52dp"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_add_black_24"
-            android:padding="2dp"/>
+            android:background="@null"
+            android:padding="12dp"
+            android:scaleType="centerInside"/>
 
-        <ImageView
+        <ImageButton
+            android:id="@+id/search_button"
             android:layout_width="52dp"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_search_black_24dp" />
+            android:src="@drawable/ic_search_black_24dp"
+            android:background="@null"
+            android:padding="12dp"
+            android:scaleType="centerInside"/>
 
-        <ImageView
+        <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_gallery_add_black_24"
-            android:layout_marginEnd="18dp" />
+            android:layout_marginEnd="18dp"
+            android:background="@null"
+            android:padding="12dp"
+            android:scaleType="centerInside"/>
     </LinearLayout>
 
 <FrameLayout
