--- a/app/src/main/res/layout/fragment_icon_list.xml
+++ b/app/src/main/res/layout/fragment_icon_list.xml
@@ -31,7 +31,7 @@
             android:text="음량 조절"/>
     </LinearLayout>
 
-    <com.sungkyul.synergy.utils.DynamicButton
+    <com.sungkyul.synergy.utils.GalaxyButton
         android:id="@+id/edu_button"
         android:layout_width="match_parent"
         android:layout_height="108dp"
