--- a/app/src/main/res/layout/activity_default_phone_add.xml
+++ b/app/src/main/res/layout/activity_default_phone_add.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".edu_space.default_app.message.activity.DefaultMessageActivity"
+    tools:context=".edu_space.default_app.phone.activity.DefaultPhoneAddActivity"
     android:background="@color/message_screen_bg">
 
     <com.sungkyul.synergy.utils.edu.EduScreen
@@ -15,10 +14,12 @@
         android:layout_height="match_parent"/>
 
     <LinearLayout
+        android:id="@+id/screen"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/phoneDeepBgColor">
+        android:background="@color/phoneDeepBgColor"
+        android:layout_alignParentTop="true">
 
         <LinearLayout
             android:orientation="horizontal"
@@ -28,9 +29,9 @@
             android:padding="12dp">
 
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_add_black_24"/>
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:src="@drawable/ic_default_phone__add_phone"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -42,7 +43,8 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_gallery_add_black_24"/>
+                android:layout_marginTop="3dp"
+                android:src="@drawable/ic_default_phone__add_down"/>
         </LinearLayout>
 
         <LinearLayout
@@ -66,21 +68,21 @@
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="60dp"
             android:layout_marginTop="50dp"
             android:padding="12dp"
-            android:background="@drawable/round_corner_white">
+            android:background="@drawable/ic_default_phone__add_box">
 
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_add_black_24"/>
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:src="@drawable/ic_default_phone__add_user"/>
 
             <EditText
                 android:id="@+id/phone_name_edit_text"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="22sp"
+                android:layout_height="45dp"
+                android:textSize="20sp"
                 android:hint="이름"
                 android:importantForAutofill="no"
                 android:inputType="text"/>
@@ -90,21 +92,22 @@
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="60dp"
             android:layout_marginTop="10dp"
             android:padding="12dp"
-            android:background="@drawable/round_corner_white">
+            android:background="@drawable/ic_default_phone__add_box">
 
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_add_black_24"/>
+                android:layout_margin="5dp"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:src="@drawable/ic_default_phone__add_call"/>
 
             <EditText
                 android:id="@+id/phone_num_edit_text"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="22sp"
+                android:layout_height="45dp"
+                android:textSize="20sp"
                 android:hint="전화번호"
                 android:importantForAutofill="no"
                 android:inputType="text"/>
@@ -113,21 +116,22 @@
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="60dp"
             android:layout_marginTop="10dp"
             android:padding="12dp"
-            android:background="@drawable/round_corner_white">
+            android:background="@drawable/ic_default_phone__add_box">
 
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_add_black_24"/>
+                android:layout_margin="4dp"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:src="@drawable/ic_default_phone__add_email"/>
 
             <EditText
                 android:id="@+id/phone_email_edit_text"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="22sp"
+                android:layout_height="45dp"
+                android:textSize="20sp"
                 android:hint="이메일"
                 android:importantForAutofill="no"
                 android:inputType="text"/>
@@ -136,56 +140,64 @@
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="60dp"
             android:layout_marginTop="10dp"
             android:padding="12dp"
-            android:background="@drawable/round_corner_white">
+            android:background="@drawable/ic_default_phone__add_box">
 
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_add_black_24"/>
+                android:layout_margin="5dp"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:src="@drawable/ic_default_phone__add_group"/>
 
             <EditText
                 android:id="@+id/phone_group_edit_text"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="22sp"
+                android:layout_height="45dp"
+                android:textSize="20sp"
                 android:hint="그룹"
                 android:importantForAutofill="no"
                 android:inputType="text"/>
 
         </LinearLayout>
 
-        <LinearLayout
-            android:id="@+id/bottom_bar"
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="8dp">
+    </LinearLayout>
+<!--이거 넣어야 취소 저장 버튼이 위로 올라옴-->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/messages"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/screen"
+        android:layout_above="@+id/bottom_bar"/>
 
-            <Button
-                android:id="@+id/cancel_button"
-                android:layout_width="wrap_content"
-                android:layout_height="48dp"
-                android:layout_weight="1"
-                android:text="취소"
-                android:textSize="16sp"
-                android:background="@color/white"/>
+    <LinearLayout
+        android:id="@+id/bottom_bar"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="8dp"
+        android:layout_alignParentBottom="true">
 
-            <Button
-                android:id="@+id/save_button"
-                android:layout_width="wrap_content"
-                android:layout_height="48dp"
-                android:layout_weight="1"
-                android:text="저장"
-                android:textColor="@color/message_selection"
-                android:textSize="16sp"
-                android:background="@color/white"/>
+        <Button
+            android:id="@+id/cancel_button"
+            android:layout_width="wrap_content"
+            android:layout_height="48dp"
+            android:layout_weight="1"
+            android:text="취소"
+            android:textSize="16sp"
+            android:background="@color/white"/>
 
-        </LinearLayout>
-
-
+        <Button
+            android:id="@+id/save_button"
+            android:layout_width="wrap_content"
+            android:layout_height="48dp"
+            android:layout_weight="1"
+            android:text="저장"
+            android:textColor="@color/message_selection"
+            android:textSize="16sp"
+            android:background="@color/white"/>
 
     </LinearLayout>
+
 </RelativeLayout>
