--- a/app/src/main/res/layout/item_message_select.xml
+++ b/app/src/main/res/layout/item_message_select.xml
@@ -15,17 +15,34 @@
         android:padding="16dp">
 
         <ImageView
-            android:id="@+id/add_image"
+            android:id="@+id/Mprofile"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:src="@drawable/todo_circle"/>
 
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="6dp"
+            android:orientation="vertical"
+            android:gravity="start|center_vertical">
+
         <TextView
-            android:id="@+id/add_name"
+            android:id="@+id/name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="12dp"
             android:text="@string/synergy"
             android:textSize="16sp"/>
+
+            <TextView
+                android:id="@+id/phoneNum"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="12dp"
+                android:text="010-1234-5678"
+                android:textSize="16sp"/>
+        </LinearLayout>
     </LinearLayout>
+
 </LinearLayout>
