--- a/app/src/main/res/layout/activity_default_message_select.xml
+++ b/app/src/main/res/layout/activity_default_message_select.xml
@@ -81,7 +81,7 @@
             <ImageView
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:src="@drawable/todo_circle"/>
+                android:src="@drawable/ic_default_message_clock"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -108,7 +108,7 @@
             <ImageView
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:src="@drawable/todo_circle"/>
+                android:src="@drawable/ic_default_message_group"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -125,17 +125,22 @@
             android:layout_height="wrap_content"
             android:src="@drawable/ic_default_message_line"/>
 
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/message_contact_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="16dp"
-            android:padding="16dp"/>
+
+            android:padding="5dp"/>
 
 
     </LinearLayout>
     <!--이거 넣어야 취소 저장 버튼이 위로 올라옴-->
 
-
+    <!--프레이먼트-->
+    <FrameLayout
+        android:id="@+id/phone_fragment_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </RelativeLayout>
